Restyled employee and service user show page, fixed bug on roster add/edit

--- a/ProjectReport&Documentation/bibliography/mybib.bib
+++ b/ProjectReport&Documentation/bibliography/mybib.bib
@@ -29,3 +29,54 @@
 	publisher="Springer", 
     year    = "2009"
 }
+
+@book{maxwilliams,
+	author  = "E.M. Maximilien and L. Williams",
+    title   = "Assessing Test-Driven Development at IBM",
+    journal = "25th International Conference on Software Engineering, 2003. Proceedings.",
+	address = "Portland, OR, USA",
+	publisher="IEEE", 
+    year    = "2003"
+}
+
+@article{davis,
+	author  = "F.D. Davis",
+    title   = "User acceptance of information technology: system characteristics, user perceptions and behavioral impacts",
+    journal = "International Journal of Man-Machine Studies Vol 38",
+	address = "Michigan Missouri, USA",
+	publisher="International Journal of Man-Machine Studies", 
+    year    = "1993"
+}
+
+@article{florentine,
+	author  = "S Florentine",
+    title   = "Why are so many IT projects failing",
+	url="http://www.cio.com/article/3068502/project-management/more-than-half-of-it-projects-still-failing.html"
+    journal = "CIO May 2013",
+	address = "New York, USA",
+	publisher="IDG", 
+    year    = "2013"
+}
+
+@article{gartner,
+	author  = "Gartner",
+    title   = "75% of all ERP projects fail – But why",
+    journal = "Quarterly Research",
+	address = "Seattle USA",
+	publisher="Gartner Research", 
+    year    = "2016"
+}
+
+@article{janzen,
+    author  = "D. Janzen. and H. Saiedian.",
+    title   = "Test-driven development concepts, taxonomy, and future direction",
+    journal = "Computer Volume: 38, Issue: 9",
+    year    = "2005"
+}
+
+@article{brisenden,
+    author  = "S. Brisenden",
+    title   = "Independent Living and the Medical Model of Disability",
+    journal = "Disability and Society Volume 1 (2) pp. 173-8",
+    year    = "1986."
+}
