Added in additional logic to handle deleting service users and employees to validate if there are cascaded relationships (do not sends, assigned employee, rosters) which need to be tidied up first.  Also updated routing between rosters and service user records based on user acceptance testing and tidied up roster new and roster show pages to be more intuitive to the user

--- a/ProjectReport&Documentation/bibliography/mybib.bib
+++ b/ProjectReport&Documentation/bibliography/mybib.bib
@@ -51,7 +51,7 @@
 @article{florentine,
 	author  = "S Florentine",
     title   = "Why are so many IT projects failing",
-	url="http://www.cio.com/article/3068502/project-management/more-than-half-of-it-projects-still-failing.html"
+	url="http://www.cio.com/article/3068502/project-management/more-than-half-of-it-projects-still-failing.html",
     journal = "CIO May 2013",
 	address = "New York, USA",
 	publisher="IDG", 
@@ -60,7 +60,7 @@
 
 @article{gartner,
 	author  = "Gartner",
-    title   = "75% of all ERP projects fail – But why",
+    title   = "75percent of all ERP projects fail But why",
     journal = "Quarterly Research",
 	address = "Seattle USA",
 	publisher="Gartner Research", 
@@ -79,4 +79,20 @@
     title   = "Independent Living and the Medical Model of Disability",
     journal = "Disability and Society Volume 1 (2) pp. 173-8",
     year    = "1986."
+}
+
+@book{smith,
+    author  = "M. Smith",
+	url="https://github.com/dr-matt-smith/php-symfony3-book",
+    title   = "PHP Symfony 3",
+    publisher="GitHub",
+    year    = "2017"
+}
+
+@article{weaver,
+    author  = "R. Weaver",
+	url="http://symfony.com/doc/current/index.html",
+    title   = "Symfony 3 Documentation",
+    publisher="Sensio Labs",
+    year    = "2017"
 }
